# advent-2024

./: .gitignore  Cargo.toml
src/: 01-1.rs  01-2.rs  02-1.rs  02-2.rs  03.rs  04.rs  05.rs  06.rs  07.rs  08.rs  09.rs  10.rs  11.rs  12.rs  13.rs  14.rs  15.rs  16.rs  17.rs  18.rs  19.rs  20.rs  21.rs  22-ocl.rs  22.rs  23.rs  24.rs  25.rs
