[package]
name = "advent-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
gcd = "2.3.0"
glam = "0.29.2"
itertools = "0.13.0"
ndarray = "0.16.1"
regex = "1.11.1"

[[bin]]
name = "01-1"
path = "src/01-1.rs"

[[bin]]
name = "01-2"
path = "src/01-2.rs"

[[bin]]
name = "02-1"
path = "src/02-1.rs"

[[bin]]
name = "02-2"
path = "src/02-2.rs"

[[bin]]
name = "03"
path = "src/03.rs"

[[bin]]
name = "04"
path = "src/04.rs"

[[bin]]
name = "05"
path = "src/05.rs"

[[bin]]
name = "06"
path = "src/06.rs"

[[bin]]
name = "07"
path = "src/07.rs"

[[bin]]
name = "08"
path = "src/08.rs"

[[bin]]
name = "09"
path = "src/09.rs"

[[bin]]
name = "10"
path = "src/10.rs"
