[package]
name = "advent-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
gcd = "2.3.0"
glam = "0.29.2"
itertools = "0.13.0"
ndarray = "0.16.1"
num-rational = "0.4.2"
regex = "1.11.1"
winnow = "0.6.20"

[[bin]]
name = "01-1"
path = "src/01-1.rs"

[[bin]]
name = "01-2"
path = "src/01-2.rs"

[[bin]]
name = "02-1"
path = "src/02-1.rs"

[[bin]]
name = "02-2"
path = "src/02-2.rs"

[[bin]]
name = "03"
path = "src/03.rs"

[[bin]]
name = "04"
path = "src/04.rs"

[[bin]]
name = "05"
path = "src/05.rs"

[[bin]]
name = "06"
path = "src/06.rs"

[[bin]]
name = "07"
path = "src/07.rs"

[[bin]]
name = "08"
path = "src/08.rs"

[[bin]]
name = "09"
path = "src/09.rs"

[[bin]]
name = "10"
path = "src/10.rs"

[[bin]]
name = "11"
path = "src/11.rs"

[[bin]]
name = "12"
path = "src/12.rs"

[[bin]]
name = "13"
path = "src/13.rs"

[[bin]]
name = "14"
path = "src/14.rs"

[[bin]]
name = "15"
path = "src/15.rs"

[[bin]]
name = "16"
path = "src/16.rs"
